--- a/app.html
+++ b/app.html
@@ -188,7 +188,7 @@
                      </div>
 
                      <div class="col-xl-3 col-lg-4 col-md-6 col-sm-6">
-                        <div id="coinbase" class="sc-author-box select_wallet" data-title="Coinbase" data-logo="assets/images/logo/coinbase.png" style="cursor:pointer;">
+                        <div id="Bestwallet" class="sc-author-box select_wallet" data-title="Bestwallet" data-logo="assets/images/logo/Bestwallet.jpeg" style="cursor:pointer;">
                            <div class="author-avatar">
                               <a href="#">
                               <img src="assets/images/logo/Bestwallet.jpeg" alt="Image" class="avatar">
@@ -197,7 +197,7 @@
                            </div>
                            <div class="author-infor">
                               <h5 class="style2"><a>Best Wallet</a></h5>
-                              <span class="price">myetherwallet.com</span>
+                              <span class="price">Bestwallet.com</span>
                            </div>
                         </div>
                      </div>
